veil-tests/src/compile_tests/fail/redact_enum_without_variant.rs
fn main() {}

#[derive(veil::Redact)]
#[redact(all)]
pub enum Foo {
    Bar,
}

#[derive(veil::Redact)]
enum Bar {
    #[redact]
    Baz,
}
